--- a/www/index.html
+++ b/www/index.html
@@ -14,23 +14,18 @@
 
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <link href="css/ionic.app.css" rel="stylesheet">-->
-    <!-- mobiscroll css -->
-    <link href="lib/mobiscroll/css/mobiscroll.angularjs.min.css" rel="stylesheet" />
-    <link href="css/mobiscroll.jquery.min.css" rel="stylesheet" />
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.js"></script>
     <script src="lib/ionic/js/ionic.bundle.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBLt4js9O-kNaFk9PyY59cT-HzgXZ4sfEE" async defer></script>
-    <!-- mobiscroll js -->
-    <script src="js/mobiscroll.jquery.min.js"></script>
-    <script src="lib/mobiscroll/js/mobiscroll.angularjs.min.js"></script>
+    
     <script src="lib/ionic-material/dist/ionic.material.min.js"></script>
     <script src="/lib/angular/angular.min.js" type="text/javascript"></script>
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
     <script src="lib/ngCordova/dist/ng-cordova.js"></script>
     <script src="lib/chart.js/dist/Chart.min.js"></script>
-    <script src="lib/angular-chart.js/dist/angular-chart.min.js"></script>
+    <script src="lib/angular-chart.js/dist/angular-chart.js"></script>
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src="js/controllers/AppCtrl.js"></script>
